Fixing layout issue

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -104,3 +104,8 @@ md-list-item > button {
   width: 100%;
   text-align: left;
 }
+
+.full-height {
+  height: 100%;
+  box-sizing: border-box;
+}
